# ashru-format

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SPEC.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rfc.yml
benchmarks/: parse_success_benchmark.py  results.csv  results.md  run_benchmark.py  throughput-results.md  throughput.py
examples/: 01-chat-message.ashru  01_read_file.py  04-negation-and-conditional.ashru  extract_batch.py
examples/integrations/: 01-langchain.py  02-langchain-retry.py
parsers/javascript/: ashru.js  package.json
parsers/python/: README.md  pyproject.toml
parsers/python/src/ashru/: __init__.py  langchain.py  pydantic.py
tests/javascript/: test_ashru.mjs
tests/python/: test_ashru.py
tests/v1.0/: conformance.json  run_javascript.mjs  run_python.py
