[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ashru"
version = "1.0.0"
description = "Pāṇini grammar in 10 columns. One pipe row → one sentence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Suman Addanki" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://json2ashru.com"
Repository = "https://github.com/ashru-format/ashru-format"

[tool.hatch.build.targets.wheel]
packages = ["src/ashru"]
